--- a/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
+++ b/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BookingCrudUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Choose>
