--- a/src/Postgaarden/Postgaarden/Postgaarden.csproj
+++ b/src/Postgaarden/Postgaarden/Postgaarden.csproj
@@ -76,12 +76,23 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Crud\Crud.cs" />
+    <Compile Include="Connection\DatabaseConnection.cs" />
+    <Compile Include="Connection\Sqlite\SqliteDatabaseConnection.cs" />
+    <Compile Include="Crud\Equipments\EquipmentCrud.cs" />
+    <Compile Include="Crud\Equipments\SqliteEquipmentCrud.cs" />
+    <Compile Include="Crud\Rooms\RoomCrud.cs" />
+    <Compile Include="Crud\Rooms\SqliteRoomCrud.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Equipments\Equipment.cs" />
+    <Compile Include="Model\Rooms\ConferenceRoom.cs" />
+    <Compile Include="Model\Rooms\Room.cs" />
+    <Compile Include="Model\Rooms\RoomHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -109,6 +120,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.98.1\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.98.1\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
