--- a/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
+++ b/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
@@ -57,9 +57,12 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ConferenceRoomUnitTest.cs" />
+    <Compile Include="CustomerCrudUnitTest.cs" />
+    <Compile Include="EmployeeUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoomData.cs" />
     <Compile Include="RoomHandlerUnitTest.cs" />
+    <Compile Include="Sql.cs" />
     <Compile Include="SqliteRoomCrudUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
