--- a/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
+++ b/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
@@ -57,7 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ConferenceRoomUnitTest.cs" />
-    <Compile Include="CustomerCrudUnitTest.cs" />
+    <Compile Include="ConfirmationmailUnitTest.cs" />
     <Compile Include="EmployeeUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoomData.cs" />
