--- a/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
+++ b/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
@@ -35,9 +35,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq.Fakes">
+      <HintPath>FakesAssemblies\Moq.Fakes.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
@@ -59,6 +65,7 @@
     <Compile Include="ConferenceRoomUnitTest.cs" />
     <Compile Include="CustomerCrudUnitTest.cs" />
     <Compile Include="EmployeeUnitTest.cs" />
+    <Compile Include="SqliteEquipmentCrudUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoomData.cs" />
     <Compile Include="RoomHandlerUnitTest.cs" />
@@ -72,6 +79,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Fakes Include="Fakes\Moq.fakes" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
