--- a/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
+++ b/src/Postgaarden/PostgaardenUnitTest/PostgaardenUnitTest.csproj
@@ -62,6 +62,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="EmailConfirmationUnitTest.cs" />
     <Compile Include="SqliteEquipmentCrudUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqliteBookingCrudUnitTest.cs" />
@@ -74,6 +75,10 @@
     <Compile Include="SqliteRoomCrudUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PostgaardenMail\PostgaardenMail.csproj">
+      <Project>{668089a6-6a60-4f79-8d40-db348788a662}</Project>
+      <Name>PostgaardenMail</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Postgaarden\Postgaarden.csproj">
       <Project>{4622de7f-c38e-46eb-a392-97dc38fb2a4b}</Project>
       <Name>Postgaarden</Name>
